--- a/pipeline/logstash.conf
+++ b/pipeline/logstash.conf
@@ -1,10 +1,10 @@
 input {
-##	tcp {
-##		mode => "server"  
-##    		host => "0.0.0.0"  
-##    		port => 4560  
-##  		codec => json_lines  
-##	}
+	tcp {
+		mode => "server"  
+   		host => "0.0.0.0"  
+   		port => 4560  
+  		codec => json_lines  
+	}
 	kafka {
             topics => ["topic_ec_server_scheduls"]
             bootstrap_servers => "kafka:9092"
