--- a/config/logstash.yml
+++ b/config/logstash.yml
@@ -11,5 +11,5 @@ path.config: /usr/share/logstash/pipeline
 #
 #xpack.monitoring.enabled: false
 xpack.monitoring.elasticsearch.url: "http://elasticsearch:9200" 
-xpack.monitoring.elasticsearch.username: "elastic" 
+xpack.monitoring.elasticsearch.username: "logstash_system" 
 xpack.monitoring.elasticsearch.password: "changeme"
