--- a/pipeline/logstash.conf
+++ b/pipeline/logstash.conf
@@ -9,14 +9,14 @@ input {
             topics => ["topic_ec_server_scheduls"]
             bootstrap_servers => "kafka:9092"
             type => "type_schedules"
-            consumer_threads => 5
+            consumer_threads => 1
             decorate_events => true
         }
 	kafka {
             topics => ["topic_ec_server"]
             bootstrap_servers => "kafka:9092"
             type => "type_server"
-            consumer_threads => 5
+            consumer_threads => 1
             decorate_events => true
         }
 }
@@ -30,8 +30,8 @@ output {
 			index => "%{type}-%{+YYYY-MM-dd}"
 			hosts => "elasticsearch:9200"
 			action  => "index"
-			user => elastic
-			password => changeme
+			user => "elastic"
+			password => "changeme"
 		}
 	}
 	if[type] == "type_server" {
@@ -39,8 +39,8 @@ output {
 			index => "%{type}-%{+YYYY-MM-dd}"
 			hosts => "elasticsearch:9200"
 			action  => "index"
-			user => elastic
-			password => changeme
+			user => "elastic"
+			password => "changeme"
 		}
 	}
 }
