--- a/pipeline/logstash.conf
+++ b/pipeline/logstash.conf
@@ -8,6 +8,7 @@ input {
 	kafka {
             topics => ["topic_ec_server_scheduls"]
             bootstrap_servers => "kafka:9092"
+	    client_id => "logstash"
             type => "type_schedules"
             consumer_threads => 1
             decorate_events => true
@@ -15,6 +16,7 @@ input {
 	kafka {
             topics => ["topic_ec_server"]
             bootstrap_servers => "kafka:9092"
+	    client_id => "logstash"
             type => "type_server"
             consumer_threads => 1
             decorate_events => true
