--- a/pipeline/logstash.conf
+++ b/pipeline/logstash.conf
@@ -5,18 +5,20 @@ input {
 #   		port => 4560  
 #  		codec => json_lines  
 #	}
-	kafka {
-            topics => ["topic_ec_server_scheduls"]
-            bootstrap_servers => "kafka:9092"
-            type => "type_schedules"
-            consumer_threads => 1
-            decorate_events => true
-        }
+#	kafka {
+#            topics => ["topic_ec_server_scheduls"]
+#           bootstrap_servers => "kafka:9092"
+#            type => "type_schedules"
+#            consumer_threads => 1
+#            decorate_events => true
+#        }
 	kafka {
             topics => ["topic_ec_server"]
             bootstrap_servers => "kafka:9092"
+	    client_id => "logstash"
+            group_id => "logstash"
             type => "type_server"
-            consumer_threads => 1
+            consumer_threads => 3
             decorate_events => true
         }
 }
@@ -24,16 +26,16 @@ input {
 ## Add your filters / logstash plugins configuration here
 
 output {
-	if[type] == "type_schedules" {
-		elasticsearch {
+#	if[type] == "type_schedules" {
+#		elasticsearch {
 ##			index => "%{[appName]}-%{+YYYY-MM-dd}"
-			index => "%{type}-%{+YYYY-MM-dd}"
-			hosts => "elasticsearch:9200"
-			action  => "index"
-			user => "elastic"
-			password => "changeme"
-		}
-	}
+#			index => "%{type}-%{+YYYY-MM-dd}"
+#			hosts => "elasticsearch:9200"
+#			action  => "index"
+#			user => "elastic"
+#			password => "changeme"
+#		}
+#	}
 	if[type] == "type_server" {
 		elasticsearch {
 			index => "%{type}-%{+YYYY-MM-dd}"
